@@ -18,8 +18,12 @@
  * Boston, MA 02110-1301, USA.
  */
 
-#ifndef __WEBKIT2_H__
-#define __WEBKIT2_H__
+#ifdef __WEBKIT_WEB_EXTENSION_H__
+#error "Headers <webkit2/webkit2.h> and <webkit2/webkit-web-extension.h> cannot be included together."
+#endif
+
+#ifndef __WEBKIT_2_H__
+#define __WEBKIT_2_H__
 
 #define __WEBKIT2_H_INSIDE__
 
