@@ -1,5 +1,17 @@
 2014-03-02  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        [GTK] Make impossible to build with <webkit2/webkit2.h> and <webkit2/webkit-web-extension.h> included together
+        https://bugs.webkit.org/show_bug.cgi?id=129549
+
+        Reviewed by Martin Robinson.
+
+        Add a compile error to prevent mixing the UI and web process APIs.
+
+        * UIProcess/API/gtk/webkit2.h:
+        * WebProcess/InjectedBundle/API/gtk/webkit-web-extension.h:
+
+2014-03-02  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [GTK] Remove the include dir of the C API from the WebKit2 pkg-config file
         https://bugs.webkit.org/show_bug.cgi?id=129543
 
